kubernetes/apps/gdd-service/pangolin-api/app/netpol.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: pangolin-api
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: pangolin-api
  ingress:
    # Only the pangolin-operator newt site pod may reach this service
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: network
            app.kubernetes.io/name: newtsite
            app.kubernetes.io/component: newt
  egress:
    # DNS resolution via CoreDNS
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:app.kubernetes.io/name: coredns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
